more code smell cleaning