@@ -18,7 +18,6 @@ import com.fasterxml.jackson.core.JsonGenerator;
 import java.io.IOException;
 import java.util.Comparator;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static com.powsybl.open_rao.data.rao_result_json.RaoResultJsonConstants.*;
 
@@ -34,7 +33,7 @@ final class AngleCnecResultArraySerializer {
 
         List<AngleCnec> sortedListOfAngleCnecs = crac.getAngleCnecs().stream()
             .sorted(Comparator.comparing(AngleCnec::getId))
-            .collect(Collectors.toList());
+            .toList();
 
         jsonGenerator.writeArrayFieldStart(ANGLECNEC_RESULTS);
         for (AngleCnec angleCnec : sortedListOfAngleCnecs) {
