@@ -18,7 +18,6 @@ import com.fasterxml.jackson.core.JsonGenerator;
 import java.io.IOException;
 import java.util.Comparator;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static com.powsybl.open_rao.data.rao_result_json.RaoResultJsonConstants.*;
 
@@ -34,7 +33,7 @@ final class VoltageCnecResultArraySerializer {
 
         List<VoltageCnec> sortedListOfVoltageCnecs = crac.getVoltageCnecs().stream()
             .sorted(Comparator.comparing(VoltageCnec::getId))
-            .collect(Collectors.toList());
+            .toList();
 
         jsonGenerator.writeArrayFieldStart(VOLTAGECNEC_RESULTS);
         for (VoltageCnec voltageCnec : sortedListOfVoltageCnecs) {
